--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,15 +1,13 @@
 body {
     margin: 0;
     padding: 0;
-}
 
-.container {
-    /* padding: 0 4vw 4vw; */
+    background: #eee;
 }
 
 .cap-header {
     padding: 4em;
-    
+
     background: linear-gradient(217deg, rgba(255, 0, 0, .8), rgba(255, 0, 0, 0) 70.71%),
         linear-gradient(127deg, rgba(0, 255, 0, .8), rgba(0, 255, 0, 0) 70.71%),
         linear-gradient(336deg, rgba(0, 0, 255, .8), rgba(0, 0, 255, 0) 70.71%);
@@ -23,36 +21,73 @@ body {
     text-align: center;
 }
 
-fieldset {
+.container {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    margin-top: 1em;
+    padding: 2em 4em;
+
+
+}
+
+.input-left,
+.result-right {
+    display: flex;
+    flex-flow: column;
     padding: 3em;
-    
+    width: 50%;
+
     border: none;
-    font-size: 2em;
+    font-size: 1em;
+    line-height: 1.6;
     text-align: center;
 }
 
-.cap-input {
-    width: 50%;
 
+fieldset {
+    border: none;
+    margin: 0;
+    padding: 0;
+}
+
+.cap-form {
+    display: flex;
+    flex-flow: column;
+}
+
+.cap-input,
+.cap-result {
+    min-height: 150px;
+    width: 100%;
+
+    
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 1em;
+    /* outline: none; */
+    overflow: hidden;
+    resize: none;
+
+}
+
+input:focus {
     outline: none;
 }
 
 .cap-button {
-    
+    align-self: flex-end;
+    margin-top: 5px;
+    padding: 3px 5px;
+    width: -moz-fit-content;
+
+    background: none;
+    border: 1px solid #555;
+    border-radius: 5px;
+    box-shadow: none;
     cursor: pointer;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 1em;
+    font-size: .8em;
     font-weight: 400;
     text-transform: uppercase;
 
-}
-
-.cap-result {
-    margin: 0 auto;
-
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 2em;
-    text-align: center;
 }
