more multi-title functionality

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
         <section class="input-left">
             <fieldset>
                 <form action="/" method="post" class="cap-form">
-                    <textarea name="title" class="cap-input" placeholder="Enter Title(s)" required></textarea>
+                    <textarea name="title" class="cap-input" placeholder="Enter Title(s)" autofocus></textarea>
                     <input type="submit" class="cap-button" value="Capitalize">
                 </form>
             </fieldset>
