--- a/public/css/style.css
+++ b/public/css/style.css
@@ -35,15 +35,23 @@ body {
 .result-right {
     display: flex;
     flex-flow: column;
-    padding: 3em;
-    width: 50%;
+    margin: 2.5%;
+    width: 45%;
 
     border: none;
+    box-shadow: none;
     font-size: 1em;
     line-height: 1.6;
     text-align: center;
 }
 
+textarea {
+    box-shadow: none;
+    border: none;
+    outline: none;
+    -moz-appearance: none;
+    user-select: none;
+}
 
 fieldset {
     border: none;
@@ -59,9 +67,8 @@ fieldset {
 .cap-input,
 .cap-result {
     min-height: 150px;
-    width: 100%;
+    padding: 10px;
 
-    
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 1em;
     /* outline: none; */
@@ -77,6 +84,7 @@ input:focus {
 .cap-button {
     align-self: flex-end;
     margin-top: 5px;
+
     padding: 3px 5px;
     width: -moz-fit-content;
 
