--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,34 +11,108 @@
 
 <body>
     <header class="cap-header">
-        <h1 class="cap-heading">Cap That Title</h1>
+        <h1 class="cap-heading">Cap That Title<svg style="height: 100px; width: 100px; vertical-align: bottom;"
+                viewBox="0 0 128 128" xmlns="http://www.w3.org/2000/svg">
+                <defs>
+                    <style>
+                        .cls-1 {
+                            fill: #d2423f;
+                        }
+
+                        .cls-2 {
+                            fill: #dd6966;
+                        }
+
+                        .cls-3 {
+                            fill: #ba3b38;
+                        }
+
+                        .cls-4 {
+                            fill: #333;
+                        }
+
+                        .cls-5 {
+                            fill: #efd3b6;
+                        }
+
+                        .cls-6 {
+                            fill: #f7e9da;
+                        }
+
+                        .cls-7 {
+                            fill: #e8bc91;
+                        }
+
+                        .cls-8 {
+                            fill: #e0a66d;
+                        }
+                    </style>
+                </defs>
+                <title />
+                <g data-name="08 Text Book" id="_08_Text_Book">
+                    <rect class="cls-1" height="68.29" rx="4.27" ry="4.27" width="96" x="16" y="29.86" />
+                    <path class="cls-2"
+                        d="M16.94,35.06a4.27,4.27,0,0,1,4.27-4.27c94.46,0,88.33-.37,90,.83-1.84-2.52,3.48-1.76-90.91-1.76A4.27,4.27,0,0,0,16,34.12c0,64.56-.71,61.39,1.76,63.19C16.58,95.7,16.94,99.9,16.94,35.06Z" />
+                    <path class="cls-3"
+                        d="M107.73,29.86h-3A4.27,4.27,0,0,1,109,34.12V91.84a4.27,4.27,0,0,1-4.27,4.27H20.13A4.26,4.26,0,0,1,16,92.88v1a4.27,4.27,0,0,0,4.27,4.27h87.46A4.27,4.27,0,0,0,112,93.88V34.12A4.27,4.27,0,0,0,107.73,29.86Z" />
+                    <rect class="cls-4" height="68.29" width="3.2" x="62.43" y="29.86" />
+                    <rect class="cls-4" height="2.03" width="3.2" x="62.43" y="96.11" />
+                    <rect class="cls-5" height="87.46" rx="2.13" ry="2.13" transform="translate(128) rotate(90)"
+                        width="59.75" x="34.12" y="20.27" />
+                    <path class="cls-6"
+                        d="M21,37a2.13,2.13,0,0,1,2.13-2.13c89,0,83.48-.17,84.27.3-.91-1.54,4.67-1.06-85-1.06a2.13,2.13,0,0,0-2.13,2.13c0,59.82-.46,56.42,1.06,57.32C20.85,92.78,21,96.15,21,37Z" />
+                    <path class="cls-7"
+                        d="M105.6,34.12H64V93.88H105.6a2.13,2.13,0,0,0,2.13-2.13V36.26A2.13,2.13,0,0,0,105.6,34.12Z" />
+                    <path class="cls-5"
+                        d="M107.43,35.18c-.91-1.54,2.16-1.06-43.4-1.06v.76C109.46,34.88,106.63,34.71,107.43,35.18Z" />
+                    <path class="cls-4" d="M55.56,60.81h-28a2,2,0,0,1,0-4h28A2,2,0,0,1,55.56,60.81Z" />
+                    <path class="cls-4" d="M55.56,81.56h-28a2,2,0,0,1,0-4h28A2,2,0,0,1,55.56,81.56Z" />
+                    <path class="cls-4" d="M55.56,71.19h-28a2,2,0,0,1,0-4h28A2,2,0,0,1,55.56,71.19Z" />
+                    <path class="cls-4" d="M55.56,50.44h-28a2,2,0,0,1,0-4h28A2,2,0,0,1,55.56,50.44Z" />
+                    <path class="cls-4" d="M99.86,60.81h-28a2,2,0,0,1,0-4h28A2,2,0,0,1,99.86,60.81Z" />
+                    <path class="cls-4" d="M99.86,81.56h-28a2,2,0,0,1,0-4h28A2,2,0,0,1,99.86,81.56Z" />
+                    <path class="cls-4" d="M99.86,71.19h-28a2,2,0,0,1,0-4h28A2,2,0,0,1,99.86,71.19Z" />
+                    <path class="cls-4" d="M99.86,50.44h-28a2,2,0,0,1,0-4h28A2,2,0,0,1,99.86,50.44Z" />
+                    <path class="cls-8"
+                        d="M105.6,34.12l-2.66,0a2.06,2.06,0,0,1,2.09,2V89.1a2.06,2.06,0,0,1-2.09,2L64,92.05v1.82H105.6a2.13,2.13,0,0,0,2.13-2.13V36.26A2.13,2.13,0,0,0,105.6,34.12Z" />
+                    <path class="cls-7" d="M64,93.88V92.05C7.51,94.46,9.54,93.88,64,93.88Z" />
+                </g>
+            </svg></h1>
     </header>
+
+    <aside class="book-cover">
+
+    </aside>
 
     <main class="container">
 
 
-        <section class="input-left">
+        <section class="cap-input-container">
             <fieldset>
                 <form action="/" method="post" class="cap-form">
                     <div class="style-select">
-                        <p class="cap-text-header">
-                            <input type="radio" name="style" value="cms" checked>CMS
-                            <input type="radio" name="style" value="apa">APA
-                            <input type="radio" name="style" value="mla">MLA
-                        </p>
-                    </div>
-                    <textarea name="title" class="cap-input" placeholder="Enter Title(s)" autofocus></textarea>
-                    <input type="submit" class="cap-button" value="Capitalize">
+                        <div class="cap-text-header">
+                            <div class="select-left">
+                                <input type="radio" name="style" value="cms" checked>CMS
+                                <input type="radio" name="style" value="apa">APA
+                                <input type="radio" name="style" value="mla">MLA
+                            </div>
+                            <div class="number-right">
+                                <% if (titleNumber > 1) { %> Titles Converted: <%= titleNumber %>
+                                <% } else if (titleNumber === 1) { %>
+                                Title Converted: <%= titleNumber %> <% } else {%><% } %>
+                            </div>
+                        </div>
+                        <textarea name="title" class="cap-input" placeholder="Enter Title(s)"
+                            autofocus><%= newTitle %></textarea>
+                        <div class="button-box">
+                            <input type="submit" class="cap-button" value="Capitalize">
+                            <% if (titleNumber > 0) { %> <button id="copy-button" class="cap-button">Copy</button>
+                            <% } else { %>
+                            <% } %>
+                        </div>
                 </form>
             </fieldset>
-        </section>
-
-        <section class="result-right">
-            <p class="cap-text-header">Titles Converted: <%= titleNumber %></p>
-            <textarea id="title-text" class="cap-result"><%= newTitle %></textarea>
-            <button id="copy-button" class="cap-button">Copy to Clipboard</button>
-        </section>
-
     </main>
 
     <!-- Load copy to clipboard srcript -->
