--- a/views/index.ejs
+++ b/views/index.ejs
@@ -115,6 +115,37 @@
             </fieldset>
     </main>
 
+    <aside class="container explainer">
+        <h2>Style Rules</h2>
+        <div class="style-rules cms">
+            <ul>
+                <li>Chicago Manual of Style</li>
+                <li>Chicago Manual of Style</li>
+                <li>Chicago Manual of Style</li>
+                <li>Chicago Manual of Style</li>
+                <li>Chicago Manual of Style</li>
+            </ul>
+        </div>
+        <div class="style-rules apa">
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
+        <div class="style-rules mla">
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
+    </aside>
+
     <!-- Load copy to clipboard srcript -->
     <script src="/js/main.js"></script>
 </body>
