--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,9 @@ body {
     padding: 0;
 
     background:#eee;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     line-height: 1.6;
+
 }
 
 .cap-header {
@@ -120,7 +122,7 @@ input:focus {
     cursor: pointer;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 1em;
-    font-weight: 400;
+    font-weight: 600;
     text-transform: uppercase;
 
 }
@@ -139,4 +141,29 @@ input:focus {
     display: flex;
     justify-content: flex-end;
     margin-top: 5px;
+}
+
+/* Style Rules  */
+.explainer {
+    flex-flow: column;
+    text-align: center;
+}
+
+.explainer h2 {
+    width: 100%;
+    
+    background: #0033FF;
+    border-radius: 5px;
+    color: #eee;
+    font-size: 2.5em;
+
+}
+.apa,
+.mla {
+    display: none;
+}
+
+.style-rules {
+    text-align: left;
+    align-self: flex-start;
 }
