--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Capitalize Your Title</title>
+    <title>Capitalize Titles</title>
     <link rel="stylesheet" type="text/css" href="/css/style.css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Righteous&display=swap" rel="stylesheet">
@@ -11,7 +11,7 @@
 
 <body>
     <header class="cap-header">
-        <h1 class="cap-heading">Cap That Title<svg style="height: 100px; width: 100px; vertical-align: bottom;"
+        <h1 class="cap-heading">Capitalize Titles <svg style="height: 100px; width: 100px; vertical-align: bottom;"
                 viewBox="0 0 128 128" xmlns="http://www.w3.org/2000/svg">
                 <defs>
                     <style>
@@ -94,12 +94,12 @@
                         <div class="cap-text-header">
                             <div class="select-left">
                                 <input type="radio" name="style" class="style-select-button" id="ap" value="ap"
-                                    checked><label for="ap">Associated Press</label>
-                                <input type="radio" name="style" class="style-select-button" id="apa" value="apa"><label
+                                    <% if (style == "ap") { %>checked<% } %>><label for="ap">AP</label>
+                                <input type="radio" name="style" class="style-select-button" id="apa" value="apa" <% if (style == "apa") { %>checked<% } %>><label
                                     for="apa">APA</label>
-                                <input type="radio" name="style" class="style-select-button" id="cms" value="cms"><label
+                                <input type="radio" name="style" class="style-select-button" id="cms" value="cms" <% if (style == "cms") { %>checked<% } %>><label
                                     for="cms">CMS</label>
-                                <input type="radio" name="style" class="style-select-button" id="mla" value="mla"><label
+                                <input type="radio" name="style" class="style-select-button" id="mla" value="mla" <% if (style == "mla") { %>checked<% } %>><label
                                     for="mla">MLA</label>
                             </div>
                             <div class="number-right">
@@ -108,7 +108,7 @@
                                 Title Converted: <%= titleNumber %> <% } else {%><% } %>
                             </div>
                         </div>
-                        <textarea name="title" class="cap-input" placeholder="Enter Title(s)"
+                        <textarea id="title-text" name="title" class="cap-input" placeholder="Enter Title(s)"
                             autofocus><%= newTitle %></textarea>
                         <div class="button-box">
                             <input type="submit" class="cap-button" value="Capitalize">
@@ -120,44 +120,58 @@
             </fieldset>
     </main>
 
-    <aside class="container explainer">
+    <aside class="container explainer-container">
         <h2>Style Rules</h2>
-        <div class="style-rules ap">
-            <ul>
-                <li>Associated Press</li>
-                <li>Associated Press</li>
-                <li>Associated Press</li>
-                <li>Associated Press</li>
-                <li>Associated Press</li>
-            </ul>
-        </div>
-        <div class="style-rules apa">
-            <ul>
-                <li>American Psychological Association</li>
-                <li>American Psychological Association</li>
-                <li>American Psychological Association</li>
-                <li>American Psychological Association</li>
-                <li>American Psychological Association</li>
-            </ul>
-        </div>
-        <div class="style-rules cms">
-            <ul>
-                <li>Chicago Manual of Style</li>
-                <li>Chicago Manual of Style</li>
-                <li>Chicago Manual of Style</li>
-                <li>Chicago Manual of Style</li>
-                <li>Chicago Manual of Style</li>
-            </ul>
-        </div>
-        <div class="style-rules mla">
-            <ul>
-                <li>Modern Language Association</li>
-                <li>Modern Language Association</li>
-                <li>Modern Language Association</li>
-                <li>Modern Language Association</li>
-                <li>Modern Language Association</li>
-            </ul>
-        </div>
+        <article class="explainer">
+            <div class="style-rules ap">
+                <h3>Associated Press</h3>
+                <ul>
+                        
+                    <li>Because length matters, uppercase words with three or more letters.</li>
+                    <li>Some parts of speech (nouns, pronouns, adjectives, verbs, adverbs, and subordinate conjunctions) are just better than others. Uppercase them.</li>
+                    <li>Other parts of speech (articles, coordinating conjunctions, and prepositions) are just lesser than. Lowercase them.</li>
+                    <li>Whenever "to" is part of something bigger than itself, i.e., an infinitive (like "to fart"), keep it lowercase.</li>
+                    <li>To break these rules is tantamount to pedophilia.</li>
+                </ul>
+            </div>
+            <div class="style-rules apa">
+                <h3>American Psychological Association</h3>
+                <ul>
+                    <li>The first word in a sentence, so smug, is capitalized, as is any of the family members, i.e., subtitles.</li>
+                    <li>All words that have complained to the manager are uppercase (nouns, verbs, adjectives, and pronouns).</li>
+                    <li>Hyphens are like word swords, so capitalize the adjoining words because they're already suffering from being stabbed.</li>
+                    <li>Words of four letters or more can quickly become unruly. Elect a head by capitalizing the first letter.</li>
+                </ul>
+            </div>
+            <div class="style-rules cms">
+                <h3>Chicago Manual of Style (17<sup>th</sup> edition)</h3>
+                <ul>
+                    <li>Begging to be seen, the first word in a sentence must always be capitalized. Lest the last word feel worse about itself, capitalize it, too. To spare the feelings of the the more self-conscious words (like nouns, pronouns, verbs, adjectives, adverbs, and some
+                        conjunctions), uppercase them as well.</li>
+                    <li>Articles (the, a, an) are the proletariat of prose: they do all work, but recieve little reward. Keep them lowercase.</li>
+                    <li>Because length doesn't matter, lowercase prepositions, except when they being extra, acting
+                        adverbially or adjectivally, or they're acting hoity toity as part of a Latin expression used
+                        adjectivally or adverbially.</li>
+                    <li>Again, spite the commoners, and lowercase the common coordinating conjunctions (and, but, for,
+                        or, and nor).</li>
+                    <li>Here's something you need <em> to do</em>: lowercase "to" when it appears as part of an
+                        infinitive. "As" has done horrible things and should always be lowercase.</li>
+                    <li>Lowercase any part of a proper name that is usually lowercase, like "von" in von Trapp.</li>
+                    <li>Lowercase the second part of a species name, such as <em>pudica</em> in <em>Mimosa pudica</em>.
+                        No exceptions!</li>
+                </ul>
+            </div>
+            <div class="style-rules mla">
+                <h3>Modern Language Association</h3>
+                <ul>
+                    <li>Modern Language Association</li>
+                    <li>Modern Language Association</li>
+                    <li>Modern Language Association</li>
+                    <li>Modern Language Association</li>
+                    <li>Modern Language Association</li>
+                </ul>
+            </div>
+        </article>
     </aside>
 
     <!-- Load copy to clipboard srcript -->
