add required to input

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -93,7 +93,7 @@
                     <div class="style-select">
                         <div class="cap-text-header">
                             <div class="select-left">
-                                <input type="radio" name="style" class="style-select-button" id="ap" value="ap"
+                                <input type="radio" name="style" class="style-select-button" id="ap" value="ap" required
                                     <% if (style == "ap") { %>checked<% } %>><label for="ap">AP</label>
                                 <input type="radio" name="style" class="style-select-button" id="apa" value="apa" <% if (style == "apa") { %>checked<% } %>><label
                                     for="apa">APA</label>
@@ -164,11 +164,10 @@
             <div class="style-rules mla">
                 <h3>Modern Language Association</h3>
                 <ul>
-                    <li>Modern Language Association</li>
-                    <li>Modern Language Association</li>
-                    <li>Modern Language Association</li>
-                    <li>Modern Language Association</li>
-                    <li>Modern Language Association</li>
+                    <li>The first word of a title is like the winner of a race. Crown it with capitalization.</li>
+                    <li>Uppercase the words society thinks are important (nouns, verbs, adverbs, and pronouns). Fuck those preposition pieces of shit.</li>
+                    <li>Don't forget to hyphenate your children. No, wait, that's vaccinate your children, and while you're at it, uppercase all major hyphenated words.</li>
+                    <li>Any words of forty letters or more, capitalize. JK. It's just four letters.</li>
                 </ul>
             </div>
         </article>
