--- a/views/index.ejs
+++ b/views/index.ejs
@@ -95,12 +95,16 @@
                             <div class="select-left">
                                 <input type="radio" name="style" class="style-select-button" id="ap" value="ap" required
                                     <% if (style == "ap") { %>checked<% } %>><label for="ap">AP</label>
-                                <input type="radio" name="style" class="style-select-button" id="apa" value="apa" <% if (style == "apa") { %>checked<% } %>><label
-                                    for="apa">APA</label>
-                                <input type="radio" name="style" class="style-select-button" id="cms" value="cms" <% if (style == "cms") { %>checked<% } %>><label
-                                    for="cms">CMS</label>
-                                <input type="radio" name="style" class="style-select-button" id="mla" value="mla" <% if (style == "mla") { %>checked<% } %>><label
-                                    for="mla">MLA</label>
+                                <input type="radio" name="style" class="style-select-button" id="apa" value="apa"
+                                    <% if (style == "apa") { %>checked<% } %>><label for="apa">APA</label>
+                                <input type="radio" name="style" class="style-select-button" id="cms" value="cms"
+                                    <% if (style == "cms") { %>checked<% } %>><label for="cms">CMS</label>
+                                <input type="radio" name="style" class="style-select-button" id="mla" value="mla"
+                                    <% if (style == "mla") { %>checked<% } %>><label for="mla">MLA</label>
+                                <input type="radio" name="style" class="style-select-button" id="nyt" value="nyt"
+                                    <% if (style == "nyt") { %>checked<% } %>><label for="nyt">NYT</label>
+                                <input type="radio" name="style" class="style-select-button" id="wp" value="wp"
+                                    <% if (style == "wp") { %>checked<% } %>><label for="wp">WP</label>
                             </div>
                             <div class="number-right">
                                 <% if (titleNumber > 1) { %> Titles Converted: <%= titleNumber %>
@@ -126,29 +130,39 @@
             <div class="style-rules ap">
                 <h3>Associated Press</h3>
                 <ul>
-                        
+
                     <li>Because length matters, uppercase words with three or more letters.</li>
-                    <li>Some parts of speech (nouns, pronouns, adjectives, verbs, adverbs, and subordinate conjunctions) are just better than others. Uppercase them.</li>
-                    <li>Other parts of speech (articles, coordinating conjunctions, and prepositions) are just lesser than. Lowercase them.</li>
-                    <li>Whenever "to" is part of something bigger than itself, i.e., an infinitive (like "to fart"), keep it lowercase.</li>
+                    <li>Some parts of speech (nouns, pronouns, adjectives, verbs, adverbs, and subordinate conjunctions)
+                        are just better than others. Uppercase them.</li>
+                    <li>Other parts of speech (articles, coordinating conjunctions, and prepositions) are just lesser
+                        than. Lowercase them.</li>
+                    <li>Whenever "to" is part of something bigger than itself, i.e., an infinitive (like "to fart"),
+                        keep it lowercase.</li>
                     <li>To break these rules is tantamount to pedophilia.</li>
                 </ul>
             </div>
             <div class="style-rules apa">
                 <h3>American Psychological Association</h3>
                 <ul>
-                    <li>The first word in a sentence, so smug, is capitalized, as is any of the family members, i.e., subtitles.</li>
-                    <li>All words that have complained to the manager are uppercase (nouns, verbs, adjectives, and pronouns).</li>
-                    <li>Hyphens are like word swords, so capitalize the adjoining words because they're already suffering from being stabbed.</li>
-                    <li>Words of four letters or more can quickly become unruly. Elect a head by capitalizing the first letter.</li>
+                    <li>The first word in a sentence, so smug, is capitalized, as is any of the family members, i.e.,
+                        subtitles.</li>
+                    <li>All words that have complained to the manager are uppercase (nouns, verbs, adjectives, and
+                        pronouns).</li>
+                    <li>Hyphens are like word swords, so capitalize the adjoining words because they're already
+                        suffering from being stabbed.</li>
+                    <li>Words of four letters or more can quickly become unruly. Elect a head by capitalizing the first
+                        letter.</li>
                 </ul>
             </div>
             <div class="style-rules cms">
                 <h3>Chicago Manual of Style (17<sup>th</sup> edition)</h3>
                 <ul>
-                    <li>Begging to be seen, the first word in a sentence must always be capitalized. Lest the last word feel worse about itself, capitalize it, too. To spare the feelings of the the more self-conscious words (like nouns, pronouns, verbs, adjectives, adverbs, and some
+                    <li>Begging to be seen, the first word in a sentence must always be capitalized. Lest the last word
+                        feel worse about itself, capitalize it, too. To spare the feelings of the the more
+                        self-conscious words (like nouns, pronouns, verbs, adjectives, adverbs, and some
                         conjunctions), uppercase them as well.</li>
-                    <li>Articles (the, a, an) are the proletariat of prose: they do all work, but recieve little reward. Keep them lowercase.</li>
+                    <li>Articles (the, a, an) are the proletariat of prose: they do all work, but recieve little reward.
+                        Keep them lowercase.</li>
                     <li>Because length doesn't matter, lowercase prepositions, except when they being extra, acting
                         adverbially or adjectivally, or they're acting hoity toity as part of a Latin expression used
                         adjectivally or adverbially.</li>
@@ -165,8 +179,10 @@
                 <h3>Modern Language Association</h3>
                 <ul>
                     <li>The first word of a title is like the winner of a race. Crown it with capitalization.</li>
-                    <li>Uppercase the words society thinks are important (nouns, verbs, adverbs, and pronouns). Fuck those preposition pieces of shit.</li>
-                    <li>Don't forget to hyphenate your children. No, wait, that's vaccinate your children, and while you're at it, uppercase all major hyphenated words.</li>
+                    <li>Uppercase the words society thinks are important (nouns, verbs, adverbs, and pronouns). Fuck
+                        those preposition pieces of shit.</li>
+                    <li>Don't forget to hyphenate your children. No, wait, that's vaccinate your children, and while
+                        you're at it, uppercase all major hyphenated words.</li>
                     <li>Any words of forty letters or more, capitalize. JK. It's just four letters.</li>
                 </ul>
             </div>
