--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,13 +18,13 @@ body {
     background: linear-gradient(#0033FF,  #0024B3);
     border-bottom: 5px solid #FFBD00;
     box-shadow: 0 1px 1px rgba(0,0,0,.25);
-    
-    
+
+
 }
 
 .cap-heading {
     margin: 0;
-    
+
     color: #fff;
     font-family: Righteous;
     font-size: 4em;
@@ -81,7 +81,7 @@ textarea {
 }
 
 textarea:focus {
-    
+
     border: 1px solid #FFBD00;
 }
 
@@ -109,8 +109,9 @@ fieldset {
     overflow: auto;
     resize: none;
     text-align: left;
-
 }
+
+
 
 input:focus {
     outline: none;
@@ -196,4 +197,31 @@ input[type="submit"]::-moz-focus-inner { */
 .style-rules {
     text-align: left;
     align-self: flex-start;
+}
+
+.cap-result {
+    margin: 0;
+    padding: 1em;
+    width: 100%;
+
+    background: #fff;
+
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 1em;
+    line-height: 1.6;
+    text-align: left;
+}
+
+.cap-result:first-child {
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+.cap-result:last-child {
+    margin-bottom: 1em;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+
+.success:before {
+    content: "😄 ";
 }
