--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,7 +6,7 @@ body {
     margin: 0;
     padding: 0;
 
-    background:#eee;
+    background: #eee;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     line-height: 1.6;
 
@@ -15,9 +15,9 @@ body {
 .cap-header {
     padding: 2em;
 
-    background: linear-gradient(#0033FF,  #0024B3);
+    background: linear-gradient(#0033FF, #0024B3);
     border-bottom: 5px solid #FFBD00;
-    box-shadow: 0 1px 1px rgba(0,0,0,.25);
+    box-shadow: 0 1px 1px rgba(0, 0, 0, .25);
 
 
 }
@@ -42,6 +42,7 @@ body {
 
 
 }
+
 .cap-text-header {
     display: flex;
     margin-bottom: 5px;
@@ -51,13 +52,16 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 700;
 }
+
 .select-left {
     margin-left: 5px;
 }
+
 .number-right {
     margin-left: auto;
     margin-right: 5px;
 }
+
 .cap-input-container {
     display: flex;
     flex-flow: column;
@@ -80,7 +84,8 @@ textarea {
 
 }
 
-textarea:focus {
+textarea:focus,
+[aria-label=results]:hover {
 
     border: 1px solid #FFBD00;
 }
@@ -96,11 +101,14 @@ fieldset {
     flex-flow: column;
 }
 
- /* Text Input  */
+/* Text Input  */
 .cap-input {
-    min-height: 250px;
+    height: 250px;
     padding: 1em;
+    position: relative;
     width: 100%;
+    z-index: 0;
+
     border-radius: 5px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 1em;
@@ -132,13 +140,13 @@ input:focus {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 1em;
     font-weight: 600;
+    line-height: 1;
     text-transform: uppercase;
-
 }
 
 .cap-button:hover,
 .cap-button:focus {
-/* input[type="button"]::-moz-focus-inner,
+    /* input[type="button"]::-moz-focus-inner,
 button::-moz-focus-inner,
 input[type="submit"]::-moz-focus-inner { */
     background: #FFBD00;
@@ -158,6 +166,8 @@ input[type="submit"]::-moz-focus-inner { */
     display: flex;
     justify-content: flex-end;
     margin-top: 5px;
+    position: relative;
+    z-index: 1;
 }
 
 /* Style Rules  */
@@ -188,6 +198,7 @@ input[type="submit"]::-moz-focus-inner { */
     text-align: center;
 
 }
+
 /* .apa,
 .cms,
 .mla {
@@ -201,27 +212,120 @@ input[type="submit"]::-moz-focus-inner { */
 
 .cap-result {
     margin: 0;
-    padding: 1em;
+    margin-bottom: calc(.8 * 1em);
     width: 100%;
 
     background: #fff;
 
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 1em;
-    line-height: 1.6;
+    line-height: 1;
     text-align: left;
 }
 
-.cap-result:first-child {
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-}
 .cap-result:last-child {
-    margin-bottom: 1em;
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
+    margin: 0;
 }
 
-.success:before {
-    content: "😄 ";
+[aria-label=results] {
+    height: 250px;
+    margin-bottom: 1em;
+    padding: 1em;
+    overflow: auto;
+
+    background: #fff;
+    border: 1px solid #fff;
+    border-radius: 5px;
+
+}
+
+.title-covers-container {
+    align-items: center;
+    display: flex;
+    font-size: .75em;
+    height: 200px;
+    justify-content: center;
+    padding: 2em 4vw;
+
+    overflow-x: scroll;
+    overflow-y: hidden;
+}
+
+.title-cover {
+    flex: 0 0 auto;
+    width: 100px;
+    height: 150px;
+    color: #111;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 5px;
+    border-radius: 5px;
+    overflow: hidden;
+}
+
+.title-cover>p {
+    padding: 5px;
+    overflow: hidden;
+    margin: 0;
+    font-weight: 400;
+}
+
+.cap-footer {
+    background: #333;
+    padding: 50px;
+    bottom: 0;
+    left: 0;
+    margin-top: 25px;
+}
+
+.cap-footer>p {
+    margin: 0;
+}
+
+.style-description {
+    margin: 0;
+    margin-right: auto;
+    padding: 3px 5px;
+
+    background: #0033FF;
+    border-radius: 5px;
+    color: #fff;
+    font-weight: 600;
+    line-height: 1;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
+.counter-in {
+    animation: fade-in .15s ease-in-out;
+    /* transition: animation .5s ease-in-out; */
+    opacity: 1;
+
+}
+
+.counter-out {
+    animation: fade-out .15s ease-in-out;
+    /* opacity: 0; */
+}
+
+@keyframes fade-in {
+    from {
+        opacity: 0;
+
+    }
+
+    to {
+        opacity: 1;
+
+    }
+}
+
+@keyframes fade-out {
+    from {
+        opacity: 1;
+    }
+
+    to {
+        opacity: 0;
+
+    }
 }
