--- a/vue-capitalize/src/styles/imports.styl
+++ b/vue-capitalize/src/styles/imports.styl
@@ -1,6 +1,19 @@
+@import "../../node_modules/normalize.css/normalize.css"
+
 cap-yellow = #ffbd00
 cap-blue = #0033ff
+cap-border-radius = 10px
+.m-0
+    margin: 0
+
 .container
     max-width 1040px
     padding 2em 4vw
     margin 0 auto
+
+.flex-row
+    display: flex
+    flex-flow: row wrap
+
+.flex-100
+    width: 100%
