--- a/vue-capitalize/src/styles/imports.styl
+++ b/vue-capitalize/src/styles/imports.styl
@@ -1,19 +1,24 @@
 @import "../../node_modules/normalize.css/normalize.css"
 
-cap-yellow = #ffbd00
-cap-blue = #0033ff
-cap-border-radius = 10px
+cap-red = #FE4949
+cap-green = #3BDE41
+cap-border = #707070
+cap-border-radius = 6px
+
 .m-0
     margin: 0
 
 .container
     max-width 1040px
-    padding 2em 4vw
     margin 0 auto
 
 .flex-row
     display: flex
     flex-flow: row wrap
+
+.flex-col
+    display: flex
+    flex-direction: column
 
 .flex-100
     width: 100%
