--- a/vue-capitalize/public/global.css
+++ b/vue-capitalize/public/global.css
@@ -4,9 +4,9 @@
 
 body {
   margin: 0;
-  padding: 0;
+  padding: 1em;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   line-height: 1.6;
-  background: #eee;
+  background: #fffefe;
 }
