--- a/vue-capitalize/src/styles/imports.styl
+++ b/vue-capitalize/src/styles/imports.styl
@@ -1,5 +1,16 @@
 @import "../../node_modules/normalize.css/normalize.css"
 
+*
+  box-sizing: border-box;
+
+body
+  margin: 0;
+  padding: 1em 2em;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  line-height: 1.6;
+  background: #fffefe;
+
 cap-red = #FE4949
 cap-green = #3BDE41
 cap-border = #707070
