--- a/vue-capitalize/src/styles/imports.styl
+++ b/vue-capitalize/src/styles/imports.styl
@@ -5,6 +5,10 @@ cap-green = #3BDE41
 cap-border = #707070
 cap-border-radius = 6px
 
+tablet = 768px
+laptop = 1366px
+desktop = 1680px
+
 .m-0
     margin: 0
 
