--- a/vue-capitalize/src/styles/imports.styl
+++ b/vue-capitalize/src/styles/imports.styl
@@ -1,4 +1,4 @@
-@import "../../node_modules/normalize.css/normalize.css"
+// @import "../../node_modules/normalize.css/normalize.css"
 
 cap-red = #FE4949
 cap-green = #3BDE41
