--- a/vue-capitalize/src/styles/imports.styl
+++ b/vue-capitalize/src/styles/imports.styl
@@ -3,6 +3,10 @@
 cap-red = #FE4949
 cap-green = #3BDE41
 cap-border = #707070
+cap-white = #F9F7F7
+cap-gray = #3D3D3D
+cap-dark-gray = #333333
+cap-darker-gray = #313030
 cap-border-radius = 6px
 
 tablet = 768px
