--- a/vue-capitalize/src/styles/imports.styl
+++ b/vue-capitalize/src/styles/imports.styl
@@ -1,12 +1,14 @@
-// @import "../../node_modules/normalize.css/normalize.css"
 
-cap-red = #FE4949
-cap-green = #3BDE41
+// cap-red = #FE4949
+cap-red = #F16B6F
+cap-green = #AACD6E
 cap-border = #707070
 cap-white = #F9F7F7
 cap-gray = #3D3D3D
 cap-dark-gray = #333333
 cap-darker-gray = #313030
+cap-info = #433b60
+cap-success = #556b30
 cap-border-radius = 6px
 
 tablet = 768px
