--- a/vue-capitalize/src/styles/imports.styl
+++ b/vue-capitalize/src/styles/imports.styl
@@ -9,6 +9,7 @@ cap-dark-gray = #333333
 cap-darker-gray = #313030
 cap-info = #433b60
 cap-success = #556b30
+cap-yellow = #F1AA6B
 cap-border-radius = 6px
 
 tablet = 768px
